Move DTOs to models pkg and Res to handlers pkg
