# models/todo.go
@@ -9,3 +9,17 @@ type Todo struct {
 	Description string             `json:"description" bson:"description"`
 	Date        string             `json:"date" bson:"date"`
 }
+
+type CreateTodoDTO struct {
+	Title       string `json:"title" bson:"title" validate:"required,min=5,max=50"`
+	Completed   *bool  `json:"completed" bson:"completed" validate:"required"`
+	Description string `json:"description" bson:"description" validate:"required,min=5,max=50"`
+	Date        string `json:"date" bson:"date" validate:"required,date"`
+}
+
+type UpdateTodoDTO struct {
+	Title       string `json:"title" bson:"title" validate:"required,min=5,max=50"`
+	Completed   *bool  `json:"completed" bson:"completed" validate:"required"`
+	Description string `json:"description" bson:"description" validate:"required,min=5,max=50"`
+	Date        string `json:"date" bson:"date" validate:"required,date"`
+}
